feat : board 도메인 객체 추가
보드 테스트 추가 및 board 도메인 객체 추가